--- a/mink.html
+++ b/mink.html
@@ -34,7 +34,8 @@
   </div>
       <div class="texto"> <b>Residency at Sonoscopia for Colexpla Festival, Porto 2019</b> <br>
     Kaffe Mathews, Marta Ângela, Inês Castanheira and Diana Combo</div>
-      <img src="images/mink/mink3.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/mink/mink.jpg" height="1500" width="2250" class="img-fluid" alt="">
+      <img src="images/mink/mink3.jpg" height="1500" width="2250" class="img-fluid" alt="">
+	<img src="images/mink/mink.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div class="texto"><br>
     <br>
     Mink is Marta Ångela, Inês Castanheira and Diana Combo directed by Kaffe Matthews and commissioned by Sonoscopia for Colexpla International Festival of Sonic Explorers,  Teatro Carlos Alberto, Porto, September 2018.
