--- a/reconetar.html
+++ b/reconetar.html
@@ -13,10 +13,10 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap-4.3.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
 			  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
 			  crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
     <script src="js/jquery.ui.touch-punch.min.js"></script>
     <script type="text/JavaScript">
       $(document).ready(function() {
