--- a/spacetime.html
+++ b/spacetime.html
@@ -94,7 +94,7 @@
       <div class="texto"><b>Encontrarte, Amares 2013 </b> <br>
     Festival of Experimental Animated Cinema</div>
       <br>
-      <img src="images/spacetime/spacetimeamares.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> </div>
+      <img src="images/spacetime/spacetimeamares.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> </div>
 	<br>
 	<br>
 	
