--- a/geomorf.html
+++ b/geomorf.html
@@ -35,7 +35,7 @@
 	<div class="texto">
 	Video stills printed composition + video installation (loop)
 	</div>
-      <img src="images/geomorf/geo.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+      <img src="images/geomorf/geo.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="images/geomorf/geovideo.m4v"></iframe>
       </div>
@@ -46,14 +46,14 @@
 	   <div class="texto"><b>33,3, Forum Maia, Porto 2013 </b> <br>
    Group exhibition</div>
       <br>
-    <img src="images/geomorf/34.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+    <img src="images/geomorf/34.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
   </div>
 		</div>
 	<br>
 	<br>
 <div class="container">
-      <div class=" col-4 draggable" style="margin: 0px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
+      <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
         <div class="caption"><span>Alvor </span></div>
         </a> </div>
       <div class="col-4 draggable" style="margin: 0px 0px 0px 0px;"> <a class="thumb" href="mosaico.html"> <img src="" alt=""/>
@@ -73,7 +73,7 @@
       <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="reconetar.html"> <img src=""  alt="" />
         <div class="caption"><span>Reconetar&Reprogramar</span></div>
         </a> </div>
-	   <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
+	   <div class="col-4 draggable" style="margin: 50px 0px 95px 0px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
         <div class="caption"><span>E-waste Panel</span></div>
         </a> </div>
 	
