--- a/alvor.html
+++ b/alvor.html
@@ -33,7 +33,7 @@
     <div class="project_title">Alvor</div>
   </div>
       <div class="texto"></div>
-      <img src="images/alvor/alvor1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+      <img src="images/alvor/alvor1.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div class="texto"><br>
     <br>
     Alvor is the result of a creative exploration that resorts to the hacking of electronic materials to produce a series of mechanical sound objects, based on the imaginary and poetic territory of bird singing. <br>
