--- a/ataripunkconsole.html
+++ b/ataripunkconsole.html
@@ -41,8 +41,8 @@
     Make your own synth! </div>
       <br>
       <br>
-      <img src="images/ataripunk/atari1.jpg" height="1500" width="2250" class="img-fluid" alt=""> 
-	 <img src="images/ataripunk/atari13.jpg" height="1500" width="2250" class="img-fluid" alt="">
+      <img src="images/ataripunk/atari1.JPG" height="1500" width="2250" class="img-fluid" alt=""> 
+	 <img src="images/ataripunk/atari13.JPG" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselatari1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari5.jpg"
@@ -84,9 +84,9 @@
       <div id="carouselatari2" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
 		 <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari20jpg"
-        alt="First slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari18.jpg"
-        alt="Second slide"> </div>        
+        alt=""> </div>        
     <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari16.jpg"
         alt=""> </div>
 		 <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari17.jpg"
@@ -123,9 +123,9 @@
       <div id="carouselatari3" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
 		 <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari34.jpg"
-        alt="First slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari31.jpg"
-        alt="Second slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari32.jpg"
         alt=""> </div>
         </div>
@@ -156,17 +156,17 @@
       <div id="carouselatari4" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
 		 <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari39.jpg"
-        alt="First slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari40.jpg"
-        alt="Second slide"> </div>
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari41.jpg"
         alt=""> </div>
-        </div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari42.jpg"
+        </iv>
+    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari42.JPG"
         alt=""> </div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari43.jpg"
+    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari43.JPG"
         alt=""> </div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari44.jpg"
+    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari44.JPG"
         alt=""> </div>
     <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari46.jpg"
         alt=""> </div>
