--- a/ataripunkconsole.html
+++ b/ataripunkconsole.html
@@ -162,11 +162,11 @@
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari41.jpg"
         alt=""> </div>
         </iv>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari42.JPG"
+    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari42.jpg"
         alt=""> </div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari43.JPG"
+    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari43.jpg"
         alt=""> </div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari44.JPG"
+    <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari44.jpg"
         alt=""> </div>
     <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari46.jpg"
         alt=""> </div>
