--- a/ataripunkconsole.html
+++ b/ataripunkconsole.html
@@ -45,28 +45,28 @@
 	 <img src="images/ataripunk/atari13.JPG" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselatari1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-          <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari5.JPG"
+          <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari5.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari2.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari2.jpg"
         alt=""> </div>
-		<div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari3.JPG"
+		<div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari3.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari4.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari4.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari7.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari7.jpg"
         alt=""> </div>
      
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari8.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari8.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari9.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari9.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari10.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari10.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari11.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari11.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari12.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari12.jpg"
         alt=""> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari14.JPG"
+          <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari14.jpg"
         alt=""> </div>
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselatari1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselatari1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
