--- a/sonstempo.html
+++ b/sonstempo.html
@@ -34,7 +34,7 @@
     <div class="project_title">Sons para fazer tempo</div>
   </div>
   <div class="texto"></div>
-<img src="images/sonstempo/sonstempo1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/sonstempo/sonstempo1.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
   <div class="texto"><br><br>
 
@@ -47,57 +47,57 @@
 	</div>
 	<br>
 	<br>
-	<img src="images/sonstempo/sonstempo2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+	<img src="images/sonstempo/sonstempo2.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
 <div id="carouselsonstempo1" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="images/sonstempo/sonstempo3.jpg"
-        alt="First slide">
+        alt="">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo4.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo5.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo6.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo7.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo8.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo9.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo10.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo11.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo12.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo13.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	  <div class="carousel-item">
       <img class="d-block w-100" src="images/sonstempo/sonstempo14.jpg"
-        alt="Third slide">
+        alt="">
     </div>
 	 
   </div>
