--- a/mosaico.html
+++ b/mosaico.html
@@ -38,7 +38,7 @@
     <br>
 <br>
    </div>
-	      <img src="images/mosaico/mosaico1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+	      <img src="images/mosaico/mosaico1.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
       <br>
       <br>
@@ -54,18 +54,18 @@
 	  <br>
 	  <br>
 	
-          <img src="images/mosaico/mosaico2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+          <img src="images/mosaico/mosaico2.JPG" height="1500" width="2250" class="img-fluid" alt="">
      
       <div id="carouselmosaico1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/mosaico/mosaico3.jpg"
-        alt="First slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico4.jpg"
-        alt="Second slide"> </div>
-          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico5.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico4.JPG"
+        alt=""> </div>
+          <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico5.JPG"
+        alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/mosaico/mosaico6.jpg"
-        alt="Third slide"> </div>
+        alt=""> </div>
     
         </div>
     <div class="arrows"> <a class="carousel-control-prev" href="#carouselmosaico1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselmosaico1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
