--- a/light.html
+++ b/light.html
@@ -101,7 +101,8 @@
       <div class="texto"><b>Residency EXPAND! Art, Science and Tecnhology</b> <br>
     at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019<br>
     <a href="expand.html"># residency project link</a></div>
-      <img src="images/expand/expand4.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <img src="images/expand/expand12.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+      <img src="images/expand/expand4.JPG" height="1500" width="2250" class="img-fluid" alt="">
+	<img src="images/expand/expand12.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselexpand2" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/expand7.JPG"
@@ -119,7 +120,7 @@
 	<br>
 	<br>
 <div class="container">
-      <div class=" col-4 draggable" style="margin: 0px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
+      <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
         <div class="caption"><span>Alvor </span></div>
         </a> </div>
       <div class="col-4 draggable" style="margin: 0px 0px 0px 0px;"> <a class="thumb" href="mosaico.html"> <img src="" alt=""/>
@@ -133,13 +134,13 @@
       <div class="col-4 draggable" style="margin: 80px 10px 0px 10px;"> <a class="thumb" href="light.html"> <img src="" alt=""/>
         <div class="caption"><span>Li#gH%t</span></div>
         </a> </div>
-      <div class="col-4 draggable " style="margin: 30px 0px 0px 50px"> <a class="thumb" href="geomorf.html"> <img src="" alt=""/>
+      <div class="col-4 draggable " style="margin: 30px 0px 50px 50px"> <a class="thumb" href="geomorf.html"> <img src="" alt=""/>
         <div class="caption"><span>Geomorf</span></div>
         </a> </div>
       <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="reconetar.html"> <img src=""  alt="" />
         <div class="caption"><span>Reconetar&Reprogramar</span></div>
         </a> </div>
-	   <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
+	   <div class="col-4 draggable" style="margin: 50px 0px 95px 0px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
         <div class="caption"><span>E-waste Panel</span></div>
         </a> </div>
 	
