--- a/panel.html
+++ b/panel.html
@@ -49,9 +49,9 @@ presented at SoundPrimavera Festival and CidadeMais Festival, Porto 2019<br>
 	</div>
 	<br>
 	<br>
-		<img src="images/ewastepanel/cidade2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+		<img src="images/ewastepanel/cidade2.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
-	<img src="images/ewastepanel/cidade1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+	<img src="images/ewastepanel/cidade1.jpg" height="1500" width="2250" class="img-fluid" alt="">
 	<br>
 	<br>
  
@@ -74,7 +74,7 @@ presented at SoundPrimavera Festival and CidadeMais Festival, Porto 2019<br>
 	
 		
 <div class="container">
-      <div class=" col-4 draggable" style="margin: 0px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
+      <div class=" col-4 draggable" style="margin: 40px 0px 0px 0px"><a class="thumb" href="alvor.html"> <img src="" alt=""/>
         <div class="caption"><span>Alvor </span></div>
         </a> </div>
       <div class="col-4 draggable" style="margin: 0px 0px 0px 0px;"> <a class="thumb" href="mosaico.html"> <img src="" alt=""/>
@@ -94,7 +94,7 @@ presented at SoundPrimavera Festival and CidadeMais Festival, Porto 2019<br>
       <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="reconetar.html"> <img src=""  alt="" />
         <div class="caption"><span>Reconetar&Reprogramar</span></div>
         </a> </div>
-	   <div class="col-4 draggable" style="margin: 50px 0px 15px 0px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
+	   <div class="col-4 draggable" style="margin: 50px 0px 95px 0px;"> <a class="thumb" href="panel.html"> <img src=""  alt="" />
         <div class="caption"><span>E-waste Panel</span></div>
         </a> </div>
 	
