--- a/spacetime.html
+++ b/spacetime.html
@@ -32,7 +32,7 @@
       <div class="project_header">
     <div class="project_title">Space-Time</div>
   </div>
-      <img src="images/spacetime/piano1.png" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+      <img src="images/spacetime/piano1.png" height="1500" width="2250" class="img-fluid" alt="">
       <div class="texto"><br>
     <br>
     What happens if we point a video camera at its own image?
