--- a/about2.html
+++ b/about2.html
@@ -38,8 +38,7 @@
        
         Inês Castanheira works and lives in Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops<br><br><br>
 		
-        ines.castanheira@protonmail.com<br>
-    PT +351 968530119<br><a href="https://vimeo.com/castanheira" target="_blank">vimeo</a></div>
+        ines.castanheira@protonmail.com<br><a href="https://vimeo.com/castanheira" target="_blank">vimeo</a></div>
     </div>
      </div>
 		<br>
