--- a/sound.html
+++ b/sound.html
@@ -31,7 +31,7 @@
 	  
 <div class="project_content">
   <div class="project_header">
-    <div class="project_title">Sound</div>
+    <div class="project_title">Music</div>
   </div>
   <div class="texto">
 	<b>Well</b>
