--- a/gamestothepeople.html
+++ b/gamestothepeople.html
@@ -42,7 +42,7 @@
 Coordination - Pedro Cardoso, Inês Castanheira <a href="http://futureplaces.org/labs/games-to-the-people-2/">#link</a>	
 	<br>
 	<br>Developing musical/sonorous and visual instruments with video games.<br>
-The goal of this workshop is to demonstrate how obsolete or outdated video game consoles can be used to perform sonorous/musical and visual compositions, initiating participants in simple principles of DIY, hardware hacking and circuit bending practices. In the first part of the workshop, the participants will be instructed in how to hack the provided hardware. In the second moment, they will create their own version of the instrument, applying the newly acquired skills.
+The goal of this workshop is to demonstrate how obsolete or outdated video game consoles can be used to perform sonorous/musical and visual compositions, initiating participants in simple principles of DIY, hardware hacking and circuit bending practices. In the first part of the workshop, the participants are instructed in how to hack the provided hardware. In the second moment, they create their own version of the instrument, applying the newly acquired skills.
 	
 	</div>
 	<br>
