--- a/sonstempo.html
+++ b/sonstempo.html
@@ -43,7 +43,8 @@
 <br>Coordination - Inês Castanheira, Luis Eustáquio
 	  <br>
 	  <br>
-	  In this workshop we will cover several creative strategies to generate sounds from reused materials. <br>Starting with a brief contextualization, several exemplary projects will be presented, and several possible approaches for using the available materials will be demonstrated. All participants are strongly advised to bring all types of devices and materials that can be used and recycled to the workshop. From modified electronic devices to soundboxes, acoustic bags and refurbished objects, participants will explore the creation of sounds as a form of temporal manifestation. In the end, a musical performance will be created together with the participants based on the objects and instruments created in the meantime.<br>
+	  In this workshop we cover several creative strategies to generate sounds from reused materials. <br>
+Starting with a brief contextualization, several exemplary projects are presented, and several possible approaches for using the available materials are demonstrated. Participants are strongly advised to bring all types of devices and materials that can be used and recycled to the workshop. From modified electronic devices to soundboxes, acoustic bags and refurbished objects, participants will explore the creation of sounds as a form of temporal manifestation. In the end, a musical performance is created in collaboration with the participants, based on the objects and instruments created in the meantime.<br>
 	</div>
 	<br>
 	<br>
