--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="caption"><span>exhibitions</span></div>
         </a> </div>-->
       <div class="col-4 draggable"  style="margin: 30px 0px 0px 0px;"> <a class="thumb" href="sound.html"> 
-      <div class="caption"><span>Music</span></div><img src="" alt="" class="img-fluid"/>
+      <div class="caption"><span>music</span></div><img src="" alt="" class="img-fluid"/>
         </a> </div>
       <div class="col-4 draggable" style="margin: 80px 0px 30px 0px;"> <a class="thumb" href="workshops.html"> <img src="" alt=""/>
         <div class="caption"><span>workshops</span></div>
