--- a/ataripunkconsole.html
+++ b/ataripunkconsole.html
@@ -45,7 +45,7 @@
 	 <img src="images/ataripunk/atari13.JPG" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselatari1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-          <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari5.jpg"
+          <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari5.JPG"
         alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari2.JPG"
         alt=""> </div>
@@ -83,7 +83,7 @@
 	
       <div id="carouselatari2" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-		 <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari20jpg"
+		 <div class="carousel-item active"> <img class="d-block w-100" src="images/ataripunk/atari20.jpg"
         alt=""> </div>
           <div class="carousel-item"> <img class="d-block w-100" src="images/ataripunk/atari18.jpg"
         alt=""> </div>        
