--- a/mosaico.html
+++ b/mosaico.html
@@ -34,7 +34,7 @@
   </div>
       <div class="texto"><br>
     <br>
-   Mosaic results from the exploration of the plasticity of the electronic image for the construction and manipulation of visual structures characterized by geometric patterns. These patterns are generated through changes in color, position, scale and resolution, using the zoom and movements of a video camera and the processing of analog effects with video equipament for the spontaneous creation of abstract forms in real time.<br>
+   Mosaico results from the exploration of the plasticity of the electronic image for the construction and manipulation of visual structures characterized by geometric patterns. These patterns are generated through changes in color, position, scale and resolution, using the zoom and movements of a video camera and the processing of analog effects with video equipament for the spontaneous creation of abstract forms in real time.<br>
     <br>
 <br>
    </div>
