--- a/piupiupiu.html
+++ b/piupiupiu.html
@@ -121,8 +121,13 @@
       <img src="images/piupiu/naterce.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
 
       <br>
-	<br>
 	
+	 <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/131708171?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen ></iframe>
+  </div>
+      <script src="https://player.vimeo.com/api/player.js"></script> 
+	<br>
+	<br>
 	   <div class="texto"><b>CHEIA, Rocha Peixoto Municipal Library, Póvoa de Varzim 2014</b> <br>
    Group exhibition</div>
       <br>
