--- a/alvor.html
+++ b/alvor.html
@@ -36,14 +36,16 @@
       <img src="images/alvor/alvor1.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div class="texto"><br>
     <br>
-    Alvor is the result of a creative exploration that resorts to the hacking of electronic materials to produce a series of mechanical sound objects, based on the imaginary and poetic territory of bird singing. <br>
+    "Alvor is the result of a creative exploration that resorts to the hacking of electronic materials to produce a series of mechanical sound objects, based on the imaginary and poetic territory of bird singing. <br>
     In this series of electronic sound objects, which evoke the shape of birds, Inês Castanheira leaves to the intensity of the light, both natural and artificial, the activation of their animistic and sonic potency.
     Individually adapted, these mechanisms are sensitive to the light and can be manipulated through artificial light or calibrated as alarms responding to the first incidence of the morning sunlight. <br>
     The chirping of the birds is, perhaps, one of the most recognisable sign of dawn, and varies according to its geographic and climatic nature.
-    In Alvor, the audience is invited to play the role of the agent who can explore that modulatory possibility, retrieving and awaking «the birds from their numb and mute state, using light as a manipulatory source to find movements and symphonies hidden inside the electronic circuit of these objects.<br>
-  </div>
-      <br>
-      <br>
+    In Alvor, the audience is invited to play the role of the agent who can explore that modulatory possibility, retrieving and awaking «the birds from their numb and mute state, using light as a manipulatory source to find movements and symphonies hidden inside the electronic circuit of these objects."<br>
+		  <br>
+  text by Rossana Mendes</div> 
+	<br>
+	
+     
       <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/334702677?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen ></iframe>
   </div>
