--- a/mosaico.html
+++ b/mosaico.html
@@ -92,7 +92,7 @@
         alt=""> </div>
     
         </div>
-    <div class="arrows"> <a class="carousel-control-prev" href="#carouselmosaico2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#9665 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselmosaico2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#9655</span> <span class="sr-only">Next</span> </a></div>
+    <div class="arrows"> <a class="carousel-control-prev" href="#carouselmosaico2" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true">&#x25c1 </span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselmosaico2" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"> &#x25b7</span> <span class="sr-only">Next</span> </a></div>
   </div>
 	
 	<br>
