--- a/empresa.html
+++ b/empresa.html
@@ -37,8 +37,8 @@
           <br>
           Live Music - Arrogance Arrogance, Doutor Urânio <br>
           Live visuals - Inês Castanheira </div>
-  </div><img src="images/empresanahora/empresa_raquel.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <br>
-      <img src="images/empresanahora/empresa5.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+  </div><img src="images/empresanahora/empresa_raquel.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br>
+      <img src="images/empresanahora/empresa5.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselempresa1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/empresanahora/empresa8.jpg"
