--- a/alvor.html
+++ b/alvor.html
@@ -106,7 +106,7 @@
       <div class="texto"><b>TROPO - Figuras coincidentes de um movimento celular, Porto 2019</b> <br>
     Collective Exhibition</div>
       <br>
-      <img src="images/alvor/tropo2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> </div>
+      <img src="images/alvor/tropo2.jpg" height="1500" width="2250" class="img-fluid" alt=""> </div>
 <br>
 <br>
 <div class="container">
