--- a/concilio.html
+++ b/concilio.html
@@ -39,7 +39,7 @@
           Live video visuals - Inês Castanheira </div>
     <br>
     <br>
-		  <img src="images/concilio/concilio1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+		  <img src="images/concilio/concilio1.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
     <div id="carouselconcilio1" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
