--- a/desilusao.html
+++ b/desilusao.html
@@ -41,7 +41,7 @@
 	</div>
 	<br>
 	<br>
-      <img src="images/desilusao/desilusao1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <img src="images/desilusao/desilusao2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+      <img src="images/desilusao/desilusao1.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/desilusao/desilusao2.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
 	<br>
 	<br>
