--- a/expand.html
+++ b/expand.html
@@ -66,7 +66,7 @@ at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019
       During the residency, light materials, electric candles, toys and other devices were collected in search of new sounds to be implemented in the installation. The electronic materials found have been reconfigured through the process of exploratory hacking of its interior and exterior, seeking to build new tangible, sound and visual possibilities, to develop a set of sound and visual objects that can be used in the context of interactive installation in contact with the public. </div>
 <br>
 <br>
-<img src="images/expand/expand4.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/expand/expand4.JPG" height="1500" width="2250" class="img-fluid" alt="">
 <div id="carouselexpand2" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
     <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/expand7.JPG"
@@ -82,7 +82,7 @@ at O Espaço do Tempo, Montemor-o-novo and Ciência Viva, Lisbon, 2018/2019
 <br>
 <div class="texto"><b>Presentation at Espaço do Tempo, Montemor-o-novo 2018</b> <br>
       <br>
-      <img src="images/expand/expand12.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+      <img src="images/expand/expand12.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselexpand3" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/expand/lightexpand.jpg"
