--- a/gamestothepeople.html
+++ b/gamestothepeople.html
@@ -34,7 +34,7 @@
     <div class="project_title">Games to the people</div>
   </div>
   <div class="texto"></div>
-<img src="images/games/games5.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/games/games5.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
   <div class="texto"><br><br>
       
@@ -54,7 +54,7 @@ The goal of this workshop is to demonstrate how obsolete or outdated video game 
 	
 	<br>
 	<br>
-	<img src="images/games/games8.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+	<img src="images/games/games8.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
 <div id="carouselgames1" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
