--- a/iii.html
+++ b/iii.html
@@ -51,7 +51,7 @@
     </div>
 <br>
 <br>
-<img src="images/III/livecode1.png" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/III/livecode1.png" height="1500" width="2250" class="img-fluid" alt="">
 <div id="carouseliii1" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
     <div class="carousel-item active"> <img class="d-block w-100" src="images/III/livecode2.png"
@@ -80,18 +80,18 @@
 <div class="texto"><b>III II</b> <br>
       Audiovisual live coding performace, Future Places Festival, Passos de Manuel, Porto 2015<br>
       <br>
-      <img src="images/III/passoslive2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <img src="images/III/passoslive1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <br>
+      <img src="images/III/passoslive2.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/III/passoslive1.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br>
       <br>
       <div class="texto"><b>III III</b> <br>
     Audiovisual live coding performace, Centro da Memória, Vila do Conde 2015 </div>
       <br>
-      <img src="images/III/experf.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <br>
+      <img src="images/III/experf.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br>
       <br>
       <br>
       <div class="texto"><b>III IIII</b> <br>
     Audiovisual live coding performace, La Escucha Errante, ZAWP, Bilbao 2015</div>
       <br>
-      <img src="images/III/errante1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <img src="images/III/errante3.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <br><br>
+      <img src="images/III/errante1.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/III/errante3.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br><br>
 	</div></div></div>
 <br>
 <br>
