--- a/image.html
+++ b/image.html
@@ -34,7 +34,7 @@
     <div class="project_title">Mink</div>
   </div>
   <div class="texto"></div>
-<img src="images/mink/mink4.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/mink/mink4.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
   <div class="texto"><br><br>
       Mink is Marta Ångela, Inês Castanheira and Diana Combo directed by Kaffe Matthews and commissioned by Sonoscopia for Colexpla International Festival of Sonic Explorers,  Teatro Carlos Alberto, Porto, September 2018.
@@ -157,7 +157,7 @@ Working live with DIY electronics, voice, software, field recordings, a pau, imp
 <br> Collective Exhibition</div>
 	<br>
 
-  <img src="images/alvor/tropo2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+  <img src="images/alvor/tropo2.jpg" height="1500" width="2250" class="img-fluid" alt="">
 
 	  
 	  
