--- a/piupiupiu.html
+++ b/piupiupiu.html
@@ -41,7 +41,7 @@
 	</div>
       <br>
       <br>
-<img src="images/piupiu/piupiu1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+<img src="images/piupiu/piupiu1.jpg" height="1500" width="2250" class="img-fluid" alt="">
       <div id="carouselpiupiu1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/piupiu/piupiu2.jpg"
@@ -109,8 +109,8 @@
 	   <div class="texto"><b>P # i ¶ î u P i ‰ P i u & ▅ , Má Arte Art Gallery, Aveiro 2014 </b> <br>
    Group exhibition</div>
       <br>
-      <img src="images/piupiu/piuma1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
-	      <img src="images/piupiu/piuma3.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
+      <img src="images/piupiu/piuma1.jpg" height="1500" width="2250" class="img-fluid" alt=""> 
+	      <img src="images/piupiu/piuma3.jpg" height="1500" width="2250" class="img-fluid" alt=""> 
       <br>
 	<br>
 	
@@ -118,7 +118,7 @@
 	   <div class="texto"><b>L # i v ¶ î n g # r ‰ o m, Nartece, Porto 2015 </b> <br>
    Solo exhibition</div>
       <br>
-      <img src="images/piupiu/naterce.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
+      <img src="images/piupiu/naterce.JPG" height="1500" width="2250" class="img-fluid" alt=""> 
 
       <br>
 	
@@ -131,15 +131,15 @@
 	   <div class="texto"><b>CHEIA, Rocha Peixoto Municipal Library, Póvoa de Varzim 2014</b> <br>
    Group exhibition</div>
       <br>
-      <img src="images/piupiu/piucheia1.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
-      <img src="images/piupiu/piucheia2.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
+      <img src="images/piupiu/piucheia1.jpg" height="1500" width="2250" class="img-fluid" alt=""> 
+      <img src="images/piupiu/piucheia2.jpg" height="1500" width="2250" class="img-fluid" alt=""> 
 
 	<br>
 	<br>
 	 <div class="texto"><b>Louro e Bambu – segundo acto, figuração do exótico, CAAA, Guimarães 2015</b> <br>
    Group exhibition</div>
       <br>
-      <img src="images/piupiu/piucaaa1.png" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
+      <img src="images/piupiu/piucaaa1.png" height="1500" width="2250" class="img-fluid" alt=""> 
  <div id="carouselpiupiu6" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
           <div class="carousel-item active"> <img class="d-block w-100" src="images/piupiu/piucaaa2.png"
