--- a/sinewave.html
+++ b/sinewave.html
@@ -42,7 +42,7 @@
         
         </div>
     <br>
-    <img src="images/sine/sine5.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> 
+    <img src="images/sine/sine5.jpg" height="1500" width="2250" class="img-fluid" alt=""> 
 		 
     <div id="carouselsine1" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
