--- a/spacetime.html
+++ b/spacetime.html
@@ -44,7 +44,7 @@
     Hardware: arduino, electronics </div>
       <br>
       <br>
-      <img src="images/spacetime/software1.png" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <br>
+      <img src="images/spacetime/software1.png" height="1500" width="2250" class="img-fluid" alt=""> <br>
       <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/45810924?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen ></iframe>
   </div>
@@ -89,12 +89,12 @@
       <div class="texto"><b>IRI, Imagens do Real Imaginado, Porto 2012 </b> <br>
     Documentary Photography and Cinema Festival</div>
       <br>
-      <img src="images/spacetime/spaceiri.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <br>
+      <img src="images/spacetime/spaceiri.jpg" height="1500" width="2250" class="img-fluid" alt=""> <br>
       <br>
       <div class="texto"><b>Encontrarte, Amares 2013 </b> <br>
     Festival of Experimental Animated Cinema</div>
       <br>
-      <img src="images/spacetime/spacetimeamares.JPG" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> </div>
+      <img src="images/spacetime/spacetimeamares.JPG" height="1500" width="2250" class="img-fluid" alt=""> </div>
 	<br>
 	<br>
 	
