--- a/yc.html
+++ b/yc.html
@@ -41,7 +41,7 @@
           <br>
         </div>
     <br>
-    <img src="images/yc/yc5.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image"> <img src="images/yc/yclive.jpg" height="1500" width="2250" class="img-fluid" alt="Placeholder image">
+    <img src="images/yc/yc5.jpg" height="1500" width="2250" class="img-fluid" alt=""> <img src="images/yc/yclive.jpg" height="1500" width="2250" class="img-fluid" alt="">
     <div id="carouselyc1" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
         <div class="carousel-item active"> <img class="d-block w-100" src="images/yc/yc1.jpg"
