--- a/about2.html
+++ b/about2.html
@@ -36,9 +36,34 @@
     <img src="images/hands.jpg" height="502px" width="670px" class="img-fluid" alt="">
     <div class="texto"><br><br>
        
-        Inês Castanheira works and lives in Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops<br><br><br>
+        Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops<br><br><br>
 		
-        ines.castanheira@protonmail.com<br><a href="https://vimeo.com/castanheira" target="_blank">vimeo</a></div>
+
+		<b>Education</b>
+		<br><br>
+		BA in Multimedia Communication Technology <br>
+		at School of Music and Performing Arts (ESMAE), Porto
+		<br><br>
+		Master Degree in Image Design <br>
+		at Faculty of Fine Arts of the University of Porto
+		<br><br>
+		
+		<b>Professional Experience</b> <br>
+		<br> 
+		Interactive Developer<br>
+		A/V Techinician<br>
+		Video operator + Editor <br>
+		Multimedia Designer<br>
+		<br><br>
+		For collaborations or more details contact:<br>
+        ines.castanheira@protonmail.com<br>
+		<br>
+		
+		<b>Links</b> <br>
+		<a href="https://vimeo.com/castanheira" target="_blank">vimeo</a>
+		
+		<br>
+	<br> Website design and code by Inês Castanheira</div>
     </div>
      </div>
 		<br>
