--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div class="col-4 draggable" style="margin: 80px 40px 60px 10px"> <a class="thumb" href="livevisuals.html"> <img src="" alt="" class="img-fluid"/>
         <div class="caption"><span>performance</span></div>
         </a> </div>
- <!--    <div class="col-4 draggable" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href="forsell.html"> <img src="" alt=""/>
-        <div class="caption"><span>for sell</span></div>
-        </a> </div>-->
+  <div class="col-4 draggable floating" style="margin: 10px 20px 40px 100px;"> <a class="thumb" href="forsell.html"> <img src="" alt=""/>
+        <div class="caption" style="text-decoration-line: line-through"><span>!website in update!</span></div>
+        </a> </div>
 	
     </div>
 
