--- a/about2.html
+++ b/about2.html
@@ -36,7 +36,7 @@
     <img src="images/hands.jpg" height="502px" width="670px" class="img-fluid" alt="">
     <div class="texto"><br><br>
        
-        Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops<br><br><br>
+        Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops.<br><br><br>
 		
 
 		<b>Education</b>
@@ -51,11 +51,12 @@
 		<b>Professional Experience</b> <br>
 		<br> 
 		Interactive Developer<br>
+		Multimedia Designer<br>
 		A/V Techinician<br>
 		Video operator + Editor <br>
-		Multimedia Designer<br>
+		
 		<br><br>
-		For collaborations or more details contact:<br>
+		For work, collaborations or more details contact:<br>
         ines.castanheira@protonmail.com<br>
 		<br>
 		
