--- a/about2.html
+++ b/about2.html
@@ -38,15 +38,6 @@
        
         Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops.<br><br><br>
 		
-
-		<b>Education</b>
-		<br><br>
-		BA in Multimedia Communication Technology <br>
-		at School of Music and Performing Arts (ESMAE), Porto
-		<br><br>
-		Master Degree in Image Design <br>
-		at Faculty of Fine Arts of the University of Porto
-		<br><br>
 		
 		<b>Professional Experience</b> <br>
 		<br> 
@@ -61,7 +52,7 @@
 		<br>
 		
 		<b>Links</b> <br>
-		<a href="https://vimeo.com/castanheira" target="_blank">vimeo</a>
+		<a href="https://vimeo.com/castanheira" target="_blank">vimeo</a><a href="https://www.instagram.com/1c.1c.1c" target="_blank">instagram</a>
 		
 		<br>
 	<br> Website design and code by Inês Castanheira</div>
