--- a/about2.html
+++ b/about2.html
@@ -36,7 +36,7 @@
     <img src="images/hands.jpg" height="502px" width="670px" class="img-fluid" alt="">
     <div class="texto"><br><br>
        
-        Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops.<br><br><br>
+        Inês Castanheira works and lives between Aveiro and Porto, Portugal. <br>Over the past few years, she has been investigating and exploring DIY strategies, hardware hacking, circuit bending and coding for the creation of artistic sound and visual objects and presenting them in the contexts of interactive installations, exhibitions, concerts and workshops.<br>
 		
 		
 		<!--<b>Professional Experience</b> <br>
@@ -52,7 +52,7 @@
 		<br>
 		
 		<b>Links</b> <br>
-		<a href="https://vimeo.com/castanheira" target="_blank">vimeo</a><br><a href="https://www.instagram.com/1c.1c.1c" target="_blank">instagram</a>
+		<a href="https://vimeo.com/castanheira" target="_blank">Vimeo</a><br><a href="https://www.instagram.com/1c.1c.1c" target="_blank">Instagram</a>
 		
 		<br>
 	<br> Website design and code by Inês Castanheira</div>
