--- a/about2.html
+++ b/about2.html
@@ -55,7 +55,7 @@
 		<a href="https://vimeo.com/castanheira" target="_blank">Vimeo</a><br><a href="https://www.instagram.com/1c.1c.1c" target="_blank">Instagram</a>
 		
 		<br>
-	<br> Website design and code by Inês Castanheira</div>
+	<br> website design and code by Inês Castanheira</div>
     </div>
      </div>
 		<br>
