--- a/about2.html
+++ b/about2.html
@@ -55,8 +55,8 @@
 		<a href="https://vimeo.com/castanheira" target="_blank">Vimeo</a><br><a href="https://www.instagram.com/1c.1c.1c" target="_blank">Instagram</a>
 		
 		<br>
-	<br> website design and code by Inês Castanheira</div>
-    </div>
+<!--	<br> website by Inês Castanheira</div>
+-->    </div>
      </div>
 		<br>
 		<br>
